# llm_extract_books

./: .env.template  .gitignore  README.md  pyproject.toml
baml_client/: async_client.py  inlinedbaml.py  partial_types.py  sync_client.py  type_builder.py  types.py
baml_src/: book.baml  clients.baml  generators.baml
llm_extract_books/: extract_book.py  get_books.py  main.py
tests/: test_extract_books.py
